--- a/css/modalModalCard.css
+++ b/css/modalModalCard.css
@@ -9,20 +9,25 @@ body {
     font-size: 16px;
 }
 
-.contenedor {
+.proyectos .contenedor {
     width: 90%;
-    max-width: 1080px;
     margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .titulo-seccion {
+    width: 45%;
     text-align: center;
     margin-bottom: 40px;
 }
 
-.titulo-seccion h2 {
+.proyectos h2 {
+    text-align: center;
     color: #0089E0;
-    font-size: 3.125rem;
+    font-size: 50px;
     margin-bottom: 15px;
     font-weight: 500;
 }
@@ -41,6 +46,7 @@ body {
 }
 
 .proyectos .galeria-proyectos {
+    width: 45%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
